# Muduo-chat-Mash

./: .gitignore  BENCHMARK.md  CMakeLists.txt  DESIGN.md  README.md  build.sh  chat_pb2.py  devlog.md  run_client.sh  run_server.sh  test_features.py  test_features.sh
benchmark/: gen_seed.py  go.mod  main.go  seed.sql
benchmark/pb/: chat.pb.go
client/: CMakeLists.txt  chat_client.cc
proto/: chat.proto
scripts/: build_and_run.sh  setup_mysql.sh
sql/: migrate_001.sql  migrate_002.sql  migrate_003.sql  migrate_004.sql  seed.sql
src/: CMakeLists.txt  chat_server.cc  chat_server.h  codec.cc  codec.h  db.cc  db.h  main.cc  redis.cc  redis.h  redis_pool.cc  redis_pool.h  room_manager.cc  room_manager.h  session_manager.cc  session_manager.h  thread_pool.h
src/protocol/: tlv_codec.cc  tlv_codec.h
src/repository/: friend_repository.h  message_repository.h  mysql_friend_repo.cc  mysql_friend_repo.h  mysql_message_repo.cc  mysql_message_repo.h  mysql_room_repo.cc  mysql_room_repo.h  mysql_session_repo.cc  mysql_session_repo.h  mysql_user_repo.cc  mysql_user_repo.h  redis_pubsub.cc  redis_pubsub.h  redis_session_repo.cc  redis_session_repo.h  room_repository.h  session_repository.h  user_repository.h
src/service/: chat_service.cc  chat_service.h  friend_service.cc  friend_service.h  login_service.cc  login_service.h  room_service.cc  room_service.h
